--- a/beranda.html
+++ b/beranda.html
@@ -206,10 +206,11 @@
                 Cek Disini
             </button>
         </div>
-        <div class="recommendation mt-3">
+        <div class="recommendation mt-3 mb-3">
             Rekomendasi
         </div>
-        <div class="food-item d-flex mt-3">
+        <div class="row">
+        <div class="food-item d-flex  col-12 col-md-6">
             <img alt="Martabak Manis Kexia" height="100"
                 src="https://storage.googleapis.com/a1aa/image/N9cLDE1ymb68CNKTWZlXd3v0Baabf3CGEMeAnrBx8hZzjptTA.jpg"
                 width="100" />
@@ -243,7 +244,7 @@
                 </div>
             </div>
         </div>
-        <div class="food-item d-flex">
+        <div class="food-item d-flex col-12 col-md-6">
             <img alt="Bubur Ketan Hitam Selera" height="100"
                 src="https://storage.googleapis.com/a1aa/image/7DjR8ZHUfOT4ZyaQNas23iZ1GwGi9dLzcCfvdzlUe2tqHTbnA.jpg"
                 width="100" />
@@ -277,7 +278,7 @@
                 </div>
             </div>
         </div>
-        <div class="food-item d-flex">
+        <div class="food-item d-flex col-12 col-md-6">
             <img alt="Cireng Ayam Mozarela Pudjasera" height="100"
                 src="https://storage.googleapis.com/a1aa/image/jIFeWudclYWCWaH8H7eorybl0a0fyojefEndCY31RLKDfYa7E.jpg"
                 width="100" />
@@ -311,7 +312,7 @@
                 </div>
             </div>
         </div>
-        <div class="food-item d-flex">
+        <div class="food-item d-flex col-12 col-md-6">
             <img alt="Belut Cabe Ijo Socha" height="100"
                 src="https://storage.googleapis.com/a1aa/image/6VbJjwzrjUpL6wOQBqZm4yVv3L9UOcLqj8hIZuGqGv5X5LtdC.jpg"
                 width="100" />
@@ -345,6 +346,8 @@
                 </div>
             </div>
         </div>
+    </div>
+
     </div>
     <div class="footer d-flex justify-content-around">
         <div class="nav-item">
