--- a/beranda.html
+++ b/beranda.html
@@ -14,12 +14,12 @@
 
 <body>
 
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <nav class="navbar navbar-expand-lg shadow-lg" style="background-color: #f1c40f;">
         <div class="container">
             <nav class="navbar bg-body-tertiary">
-                <div class="container">
-                    <a class="navbar-brand" href="#">
-                        <img src="/image/logo.jpg" alt="Logo" width="30" height="24"
+                <div class="container" style="background-color: #f1c40f;">
+                    <a class="navbar-brand" href="#" style="background-color: #f1c40f;">
+                        <img src="/image/logo2.png" alt="Logo" width="40" height="34"
                             class="d-inline-block align-text-top">
                         Speed Dish
                     </a>
@@ -29,8 +29,16 @@
                 aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
+
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav ms-auto">
+                    <!-- <div class="container-fluid">
+                        <form class="d-flex" role="search">
+                            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                            <button class="btn btn-outline-success" type="submit">Search</button>
+                        </form>
+                    </div> -->
+
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="#">Beranda</a>
                     </li>
@@ -67,54 +75,81 @@
                     Sidorekso
                 </span>
             </div>
+
         </div>
-        <div class="search-bar mt-3 d-flex align-items-center">
-            <i class="fas fa-search">
-            </i>
-            <input placeholder="Cari Makanan" type="text" />
-            <i class="fas fa-shopping-cart">
-            </i>
-        </div>
-        <div class="d-flex justify-content-around mt-3">
-            <div class="category text-center">
-                <img alt="Rice" height="50"
-                    src="https://storage.googleapis.com/a1aa/image/HRsAE1waeV23diWMa25fr3SvjJ4KA4hgalcV4hfne8IqOm2OB.jpg"
-                    width="50" />
-                <p>
-                    Makanan
-                </p>
+        <section class="jumbotron-fluid">
+            <div class="container-fluid">
+                <h1 class="fw-bold">Pesan atau Antar Makananmu</h1>
+                <p class="text-muted">Restoran terbaik dengan harga terbaik</p>
+                <div class="search-box">
+                    <input type="text" placeholder="Cari Makanan">
+                    <button type="button">Search</button>
+                </div>
+                <div class="trending">
+                    <strong>Populer:</strong> Ayam Geprek, Burger, Pizza
+                </div>
             </div>
-            <div class="category text-center">
-                <img alt="Noodles" height="50"
-                    src="https://storage.googleapis.com/a1aa/image/lEekGmel5DmtEUFt8eL1Ml59MFv9U8ru2vPcEv5A0UPWHTbnA.jpg"
-                    width="50" />
-                <p>
-                    Mie
-                </p>
-            </div>
-            <div class="category text-center">
-                <img alt="Drink" height="50"
-                    src="https://storage.googleapis.com/a1aa/image/NiTtYPq5icaDL9gBNsGiCtgJeUinewECXmaXEJWCh4xujptTA.jpg"
-                    width="50" />
-                <p>
-                    Minuman
-                </p>
-            </div>
-            <div class="category text-center">
-                <img alt="Snack" height="50"
-                    src="https://storage.googleapis.com/a1aa/image/NG3t4FXvXYodNRo3mkbmaA0Nc98BdRNI2lR7cJFYbCN8Ya7E.jpg"
-                    width="50" />
-                <p>
-                    Snack
-                </p>
-            </div>
-            <div class="category text-center">
-                <img alt="Coffee" height="50"
-                    src="https://storage.googleapis.com/a1aa/image/1LrXR8fWqxWWNyD1aW9BTEzjTGT6EYNG7exOvg0SCWHxjptTA.jpg"
-                    width="50" />
-                <p>
-                    Kopi
-                </p>
+        </section>
+
+
+        <div class="container mt-4">
+            <h4>
+                Top Categories
+            </h4>
+            <div class="category-container">
+                <div class="category-card">
+                    <img alt="Image of Pizza" height="115"
+                        src="https://storage.googleapis.com/a1aa/image/6cQNEHc1xt6NJlu0tvOc7fiSu43KfRuqfYhQUKHN8edrt17OB.jpg"
+                        width="170" />
+                    <span>
+                        Pizza
+                    </span>
+                </div>
+                
+                <div class="category-card">
+                    <img alt="Image of Sushi" height="115"
+                        src="https://storage.googleapis.com/a1aa/image/RpcGfTlRvqTxSiCaeVfWnMQHIbuTt1HoQasZNNdMmcHw26dnA.jpg"
+                        width="170" />
+                    <span>
+                        Sushi
+                    </span>
+                </div>
+                <div class="category-card">
+                    <img alt="Image of Dessert" height="115"
+                        src="https://storage.googleapis.com/a1aa/image/NFL7ME9FDyKjC5cNwL982f2S7r9fvNusJ1rb9TzSdtZXb9uTA.jpg"
+                        width="170" />
+                    <span>
+                        Dessert
+                    </span>
+                </div>
+                <div class="category-card">
+                    <img alt="Image of Hamburger" height="115"
+                        src="https://storage.googleapis.com/a1aa/image/Gd8908Ve4vzUIyfyFMFroyVc8Hp9XQKSolNeCpTo86cp26dnA.jpg"
+                        width="170" />
+                    <span>
+                        Hamburger
+                    </span>
+                </div>
+                <div class="category-card">
+                    <img alt="Image of Ice Cream" height="115"
+                        src="https://storage.googleapis.com/a1aa/image/03oe1Jh0C5XuASFOjRcf3CMpxeJMkrwKpW30bcDzideYt17OB.jpg"
+                        width="170" />
+                    <span>
+                        Ice Cream
+                    </span>
+                </div>
+                <div class="category-card">
+                    <img alt="Image of Kebab" height="115"
+                        src="https://storage.googleapis.com/a1aa/image/d3fS6yeyIgpg90Jp6IOZ3oC8jqsSV8fafXsIlNL9nf6bar3dC.jpg"
+                        width="170" />
+                    <span>
+                        Kebab
+                    </span>
+                </div>
+                <div class="arrow">
+                    <i class="fas fa-arrow-right">
+                    </i>
+                </div>
             </div>
         </div>
         <div class="d-flex justify-content-between mt-3">
@@ -128,12 +163,20 @@
                 <br />
                 Cek Disini
             </button>
+
         </div>
-        <div class="recommendation mt-3 mb-3">
-            Rekomendasi
+        <div class="container mt-4">
+            <div class="promo-banner">
+                <div>
+                    <div class="promo-text">Rekomendasi</div>
+                    <div class="promo-subtext">Tak perlu keluar rumah untuk menikmati hidangan terbaik! Temukan beragam pilihan makanan lezat dan pesan hanya dengan beberapa klik.</div>
+                </div>
+                <div class="promo-icon">
+                    <i class="fas fa-motorcycle"></i>
+                </div>
+            </div>
         </div>
-        <div class="row">
-        <div class="food-item d-flex  col-12 col-md-6">
+        <div class="food-item d-flex mt-3">
             <img alt="Martabak Manis Kexia" height="100"
                 src="https://storage.googleapis.com/a1aa/image/N9cLDE1ymb68CNKTWZlXd3v0Baabf3CGEMeAnrBx8hZzjptTA.jpg"
                 width="100" />
@@ -167,7 +210,7 @@
                 </div>
             </div>
         </div>
-        <div class="food-item d-flex col-12 col-md-6">
+        <div class="food-item d-flex">
             <img alt="Bubur Ketan Hitam Selera" height="100"
                 src="https://storage.googleapis.com/a1aa/image/7DjR8ZHUfOT4ZyaQNas23iZ1GwGi9dLzcCfvdzlUe2tqHTbnA.jpg"
                 width="100" />
@@ -201,7 +244,7 @@
                 </div>
             </div>
         </div>
-        <div class="food-item d-flex col-12 col-md-6">
+        <div class="food-item d-flex">
             <img alt="Cireng Ayam Mozarela Pudjasera" height="100"
                 src="https://storage.googleapis.com/a1aa/image/jIFeWudclYWCWaH8H7eorybl0a0fyojefEndCY31RLKDfYa7E.jpg"
                 width="100" />
@@ -235,7 +278,7 @@
                 </div>
             </div>
         </div>
-        <div class="food-item d-flex col-12 col-md-6">
+        <div class="food-item d-flex">
             <img alt="Belut Cabe Ijo Socha" height="100"
                 src="https://storage.googleapis.com/a1aa/image/6VbJjwzrjUpL6wOQBqZm4yVv3L9UOcLqj8hIZuGqGv5X5LtdC.jpg"
                 width="100" />
@@ -271,47 +314,8 @@
         </div>
     </div>
 
-<<<<<<< HEAD
-=======
-    </div>
-    <div class="footer d-flex justify-content-around">
-        <div class="nav-item">
-            <i class="fas fa-home">
-            </i>
-            <p>
-                Beranda
-            </p>
-        </div>
-        <div class="nav-item">
-            <i class="fas fa-heart">
-            </i>
-            <p>
-                Favorit
-            </p>
-        </div>
-        <div class="nav-item">
-            <i class="fas fa-clipboard-list">
-            </i>
-            <p>
-                Pesanan
-            </p>
-        </div>
-        <div class="nav-item">
-            <i class="fas fa-bell">
-            </i>
-            <p>
-                Notifikasi
-            </p>
-        </div>
-        <div class="nav-item">
-            <i class="fas fa-user">
-            </i>
-            <p>
-                Akun
-            </p>
-        </div>
-    </div>
->>>>>>> 5fb53e2fb220f9f2d304df29eae8087f0142517a
+    <!-- <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#6a1b0c" fill-opacity="1" d="M0,192L26.7,165.3C53.3,139,107,85,160,101.3C213.3,117,267,203,320,229.3C373.3,256,427,224,480,192C533.3,160,587,128,640,138.7C693.3,149,747,203,800,208C853.3,213,907,171,960,160C1013.3,149,1067,171,1120,170.7C1173.3,171,1227,149,1280,149.3C1333.3,149,1387,171,1413,181.3L1440,192L1440,320L1413.3,320C1386.7,320,1333,320,1280,320C1226.7,320,1173,320,1120,320C1066.7,320,1013,320,960,320C906.7,320,853,320,800,320C746.7,320,693,320,640,320C586.7,320,533,320,480,320C426.7,320,373,320,320,320C266.7,320,213,320,160,320C106.7,320,53,320,27,320L0,320Z" style="--darkreader-inline-fill: #55160a;" data-darkreader-inline-fill=""></path></svg> -->
+
 </body>
 
 </html>
