--- a/beranda.html
+++ b/beranda.html
@@ -15,8 +15,8 @@
 <body>
 
     <nav class="navbar navbar-expand-lg shadow-lg" style="background-color: #f1c40f;">
-        <div class="container">
-            <nav class="navbar bg-body-tertiary">
+        <div class="container" >
+            <nav class="navbar bg-body-tertiary"  >
                 <div class="container" style="background-color: #f1c40f;">
                     <a class="navbar-brand" href="#" style="background-color: #f1c40f;">
                         <img src="/image/logo2.png" alt="Logo" width="40" height="34"
@@ -32,12 +32,6 @@
 
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav ms-auto">
-                    <!-- <div class="container-fluid">
-                        <form class="d-flex" role="search">
-                            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                            <button class="btn btn-outline-success" type="submit">Search</button>
-                        </form>
-                    </div> -->
 
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="#">Beranda</a>
@@ -63,6 +57,7 @@
             </div>
         </div>
     </nav>
+
     <div class="container mt-3">
         <div class="d-flex justify-content-between align-items-center">
             <div class="d-flex align-items-center">
@@ -105,7 +100,7 @@
                         Pizza
                     </span>
                 </div>
-                
+
                 <div class="category-card">
                     <img alt="Image of Sushi" height="115"
                         src="https://storage.googleapis.com/a1aa/image/RpcGfTlRvqTxSiCaeVfWnMQHIbuTt1HoQasZNNdMmcHw26dnA.jpg"
@@ -169,44 +164,200 @@
             <div class="promo-banner">
                 <div>
                     <div class="promo-text">Rekomendasi</div>
-                    <div class="promo-subtext">Tak perlu keluar rumah untuk menikmati hidangan terbaik! Temukan beragam pilihan makanan lezat dan pesan hanya dengan beberapa klik.</div>
+                    <div class="promo-subtext">Tak perlu keluar rumah untuk menikmati hidangan terbaik! Temukan beragam
+                        pilihan makanan lezat dan pesan hanya dengan beberapa klik.</div>
                 </div>
                 <div class="promo-icon">
                     <i class="fas fa-motorcycle"></i>
                 </div>
             </div>
         </div>
-        <div class="food-item d-flex mt-3">
-            <img alt="Martabak Manis Kexia" height="100"
-                src="https://storage.googleapis.com/a1aa/image/N9cLDE1ymb68CNKTWZlXd3v0Baabf3CGEMeAnrBx8hZzjptTA.jpg"
-                width="100" />
-            <div class="details">
-                <h5>
-                    Martabak Manis Kexia
-                </h5>
-                <p>
-                    Snack | Sealasar
-                </p>
-                <div class="d-flex align-items-center">
-                    <span class="rating">
-                        <i class="fas fa-star">
-                        </i>
-                        4.9 (156)
-                    </span>
-                    <span class="ms-2">
-                        0.5km
-                    </span>
-                    <span class="ms-2">
-                        10min
-                    </span>
+        <div class="container mt-5">
+            <div class="header">
+                <h2>
+                    Top Rated Restaurants
+                </h2>
+                <a href="#">
+                    View All →
+                </a>
+            </div>
+            <p>
+                Cum doctus civibus efficiantur in imperdiet deterruisset.
+            </p>
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="restaurant-card">
+                        <img alt="Image of La Monnalisa restaurant" height="233"
+                            src="https://storage.googleapis.com/a1aa/image/mv2mSA1DV1YPHVEL01f0qlucYXmI2HNez9WpNgLPC5qrqednA.jpg"
+                            width="350" />
+                        <div class="restaurant-info">
+                            <p>
+                                Italian
+                            </p>
+                            <h5>
+                                La Monnalisa
+                            </h5>
+                            <p>
+                                8 Patriot Square E2 9NF
+                            </p>
+                            <span class="badge">
+                                <i class="fas fa-fire">
+                                </i>
+                                -30%
+                            </span>
+                            Average price $35
+                        </div>
+                        <div class="restaurant-rating">
+                            <i class="fas fa-star">
+                            </i>
+                            9.5
+                        </div>
+                    </div>
                 </div>
-                <div class="d-flex mt-2">
-                    <span class="discount me-2">
-                        Diskon 100%
-                    </span>
-                    <span class="discount">
-                        Diskon Ongkir
-                    </span>
+                <div class="col-md-6">
+                    <div class="restaurant-card">
+                        <img alt="Image of Mr. Pepper restaurant" height="233"
+                            src="https://storage.googleapis.com/a1aa/image/2xdrdiHEbooqFFfhyHY3j5rRSiRYNAA3q9jbsJomyBtXVfuTA.jpg"
+                            width="350" />
+                        <div class="restaurant-info">
+                            <p>
+                                Vegetarian
+                            </p>
+                            <h5>
+                                Mr. Pepper
+                            </h5>
+                            <p>
+                                27 Old Gloucester St, 4563
+                            </p>
+                            <span class="badge">
+                                <i class="fas fa-fire">
+                                </i>
+                                -30%
+                            </span>
+                            Average price $20
+                        </div>
+                        <div class="restaurant-rating">
+                            <i class="fas fa-star">
+                            </i>
+                            9.5
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="restaurant-card">
+                        <img alt="Image of Alliance restaurant" height="233"
+                            src="https://storage.googleapis.com/a1aa/image/7FY8tKe3YNydfkaGbdLLf7r3uurVyexteuB4rVngi5PuV13dC.jpg"
+                            width="350" />
+                        <div class="restaurant-info">
+                            <p>
+                                Mexican
+                            </p>
+                            <h5>
+                                Alliance
+                            </h5>
+                            <p>
+                                27 Old Gloucester St, 4563
+                            </p>
+                            <span class="badge">
+                                <i class="fas fa-fire">
+                                </i>
+                                -40%
+                            </span>
+                            Average price $30
+                        </div>
+                        <div class="restaurant-rating">
+                            <i class="fas fa-star">
+                            </i>
+                            8.0
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="restaurant-card">
+                        <img alt="Image of Dragon Tower restaurant" height="233"
+                            src="https://storage.googleapis.com/a1aa/image/2nwgey8j433cEqtU6UVzSDShko8CAL6pv7LHqkfDhupsqednA.jpg"
+                            width="350" />
+                        <div class="restaurant-info">
+                            <p>
+                                Chinese
+                            </p>
+                            <h5>
+                                Dragon Tower
+                            </h5>
+                            <p>
+                                22 Hertsmere Rd E14 4ED
+                            </p>
+                            <span class="badge">
+                                <i class="fas fa-fire">
+                                </i>
+                                -50%
+                            </span>
+                            Average price $35
+                        </div>
+                        <div class="restaurant-rating">
+                            <i class="fas fa-star">
+                            </i>
+                            8.0
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="restaurant-card">
+                        <img alt="Image of Sushi Gold restaurant" height="233"
+                            src="https://storage.googleapis.com/a1aa/image/LDBBObSN7RrrIZLJWh75v3ZJSAFXGb5z17L4l3jemSuUVfuTA.jpg"
+                            width="350" />
+                        <div class="restaurant-info">
+                            <p>
+                                Sushi - Japanese
+                            </p>
+                            <h5>
+                                Sushi Gold
+                            </h5>
+                            <p>
+                                Old Shire Ln EN9 3RX
+                            </p>
+                            <span class="badge">
+                                <i class="fas fa-fire">
+                                </i>
+                                -25%
+                            </span>
+                            Average price $20
+                        </div>
+                        <div class="restaurant-rating">
+                            <i class="fas fa-star">
+                            </i>
+                            9.0
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="restaurant-card">
+                        <img alt="Image of Bella Napoli restaurant" height="233"
+                            src="https://storage.googleapis.com/a1aa/image/FPBWJ38CIqZaPlaSYAx436QWVOt7bWa3g21jo7Q5idIqqv7E.jpg"
+                            width="350" />
+                        <div class="restaurant-info">
+                            <p>
+                                Pizza - Italian
+                            </p>
+                            <h5>
+                                Bella Napoli
+                            </h5>
+                            <p>
+                                135 Newtownards Road BT4
+                            </p>
+                            <span class="badge">
+                                <i class="fas fa-fire">
+                                </i>
+                                -45%
+                            </span>
+                            Average price $25
+                        </div>
+                        <div class="restaurant-rating">
+                            <i class="fas fa-star">
+                            </i>
+                            8.5
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -314,7 +465,24 @@
         </div>
     </div>
 
-    <!-- <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#6a1b0c" fill-opacity="1" d="M0,192L26.7,165.3C53.3,139,107,85,160,101.3C213.3,117,267,203,320,229.3C373.3,256,427,224,480,192C533.3,160,587,128,640,138.7C693.3,149,747,203,800,208C853.3,213,907,171,960,160C1013.3,149,1067,171,1120,170.7C1173.3,171,1227,149,1280,149.3C1333.3,149,1387,171,1413,181.3L1440,192L1440,320L1413.3,320C1386.7,320,1333,320,1280,320C1226.7,320,1173,320,1120,320C1066.7,320,1013,320,960,320C906.7,320,853,320,800,320C746.7,320,693,320,640,320C586.7,320,533,320,480,320C426.7,320,373,320,320,320C266.7,320,213,320,160,320C106.7,320,53,320,27,320L0,320Z" style="--darkreader-inline-fill: #55160a;" data-darkreader-inline-fill=""></path></svg> -->
+    <div class="waves-container">
+        <div class="waves">
+            <svg width="100%" height="200px" fill="none" version="1.1" xmlns="http://www.w3.org/2000/svg">
+                <linearGradient id="grad1" x1="0%" y1="0%" x2="100%" y2="0%">
+                    <stop offset="0%" stop-color="#6b1c0c" />
+                    <stop offset="50%" stop-color="#bf392a" />
+                    <stop offset="100%" stop-color="#6b1c0c" />
+                </linearGradient>
+                <path fill="url(#grad1)" d="M0 67 C 273,183 822,-40 1920.00,106 V 359 H 0  V 67 Z">
+                    <animate repeatCount="indefinite" fill="url(#grad1)" attributeName="d" dur="15s" attributeType="XML"
+                        values="M0 77  C 473,283 822,-40 1920,116  V 359 H 0  V 67 Z; M0 77 C 473,-40 1222,283 1920,136  V 359 H 0 V 67 Z; M0 77 C 973,260 1722,-53 1920,120  V 359  H 0  V 67  Z; M0 77 C 473,283 822,-40 1920,116 V 359 H 0 V 67 Z">
+                    </animate>
+                </path>
+            </svg>
+        </div>
+
+
+        <!-- <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#6a1b0c" fill-opacity="1" d="M0,192L26.7,165.3C53.3,139,107,85,160,101.3C213.3,117,267,203,320,229.3C373.3,256,427,224,480,192C533.3,160,587,128,640,138.7C693.3,149,747,203,800,208C853.3,213,907,171,960,160C1013.3,149,1067,171,1120,170.7C1173.3,171,1227,149,1280,149.3C1333.3,149,1387,171,1413,181.3L1440,192L1440,320L1413.3,320C1386.7,320,1333,320,1280,320C1226.7,320,1173,320,1120,320C1066.7,320,1013,320,960,320C906.7,320,853,320,800,320C746.7,320,693,320,640,320C586.7,320,533,320,480,320C426.7,320,373,320,320,320C266.7,320,213,320,160,320C106.7,320,53,320,27,320L0,320Z" style="--darkreader-inline-fill: #55160a;" data-darkreader-inline-fill=""></path></svg> -->
 
 </body>
 
