--- a/akun.html
+++ b/akun.html
@@ -6,86 +6,9 @@
     <link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" rel="stylesheet" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet" />
-    <style>
-        body {
-            background-color: #f0f0f0;
-            font-family: Arial, sans-serif;
-        }
 
-        .header {
-            background-color: #6a1b1a;
-            color: white;
-            padding: 20px;
-            text-align: center;
-            font-size: 24px;
-            position: relative;
-        }
+    <link rel="stylesheet" href="style css/akun.css">
 
-        .profile {
-            background-color: #e0e0e0;
-            padding: 20px;
-            text-align: center;
-        }
-
-        .profile img {
-            border-radius: 50%;
-            width: 80px;
-            height: 80px;
-        }
-
-        .profile h5 {
-            margin-top: 10px;
-            font-weight: bold;
-        }
-
-        .profile p {
-            color: #888;
-        }
-
-        .menu-item {
-            background-color: white;
-            padding: 15px;
-            margin: 10px 0;
-            border-radius: 10px;
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-        }
-
-        .menu-item i {
-            margin-right: 10px;
-        }
-
-        .menu-item span {
-            font-size: 16px;
-        }
-
-        .menu-item .fa-chevron-right {
-            color: #888;
-        }
-
-        .footer {
-            background-color: #ffcc00;
-            padding: 10px 0;
-            position: fixed;
-            bottom: 0;
-            width: 100%;
-            display: flex;
-            justify-content: space-around;
-        }
-
-        .footer a {
-            color: black;
-            text-align: center;
-            font-size: 14px;
-            text-decoration: none;
-        }
-
-        .footer a i {
-            display: block;
-            font-size: 20px;
-        }
-    </style>
 </head>
 
 <body>
