--- a/beranda.html
+++ b/beranda.html
@@ -14,11 +14,11 @@
 
 <body>
 
-    <nav class="navbar navbar-expand-lg shadow-lg" style="background-color: #f1c40f;">
+    <nav class="navbar navbar-expand-lg shadow-lg" >
         <div class="container" >
             <nav class="navbar bg-body-tertiary"  >
-                <div class="container" style="background-color: #f1c40f;">
-                    <a class="navbar-brand" href="#" style="background-color: #f1c40f;">
+                <div class="container">
+                    <a class="navbar-brand" href="#" >
                         <img src="/image/logo2.png" alt="Logo" width="40" height="34"
                             class="d-inline-block align-text-top">
                         Speed Dish
