--- a/beranda.html
+++ b/beranda.html
@@ -351,6 +351,7 @@
     </div>
     <div class="footer d-flex justify-content-around">
         <div class="nav-item">
+            
             <i class="fas fa-home">
             </i>
             <p>
@@ -358,18 +359,22 @@
             </p>
         </div>
         <div class="nav-item">
+            <a href="favorit.html" class="nav-item text-decoration-none text-dark">
             <i class="fas fa-heart">
             </i>
             <p>
                 Favorit
             </p>
+        </a>
         </div>
         <div class="nav-item">
+            <a href="pesan.html" class="nav-item text-decoration-none text-dark">
             <i class="fas fa-clipboard-list">
             </i>
             <p>
                 Pesanan
             </p>
+        </a>
         </div>
         <div class="nav-item">
             <i class="fas fa-bell">
