--- a/beranda.html
+++ b/beranda.html
@@ -8,17 +8,26 @@
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" rel="stylesheet" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet" />
 
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
+        integrity="sha384-oBqDVmMz4fnFO9gybVg9OP7uCEEpZjsHJT2JxLgJ4E4+hKuZ8VRPCYZg0UcEG0+R"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"
+        integrity="sha384-Q3oFBOA6hWf8ZHMDcCDyo+8zN3h8/WeZjKkH+VQDYbU15bl9WXf+PAfKtRGzt2xN"
+        crossorigin="anonymous"></script>
+
+
+
 </head>
 
 <link rel="stylesheet" href="/style css/beranda.css">
 
 <body>
 
-    <nav class="navbar navbar-expand-lg shadow-lg" >
-        <div class="container" >
-            <nav class="navbar bg-body-tertiary"  >
-                <div class="container">
-                    <a class="navbar-brand" href="#" >
+    <nav class="navbar navbar-expand-lg shadow-lg">
+        <div class="container">
+            <nav class="navbar bg-body-tertiary">
+                <div class="container-fluid">
+                    <a class="navbar-brand" href="#">
                         <img src="/image/logo2.png" alt="Logo" width="40" height="34"
                             class="d-inline-block align-text-top">
                         Speed Dish
