--- a/beranda.html
+++ b/beranda.html
@@ -22,20 +22,12 @@
 <link rel="stylesheet" href="/style css/beranda.css">
 
 <body>
-<<<<<<< HEAD
-
-    <nav class="navbar navbar-expand-lg shadow-lg">
-        <div class="container">
-            <nav class="navbar bg-body-tertiary">
-                <div class="container-fluid">
-                    <a class="navbar-brand" href="#">
-=======
     <nav class="navbar navbar-expand-lg shadow-lg" >
         <div class="container" >
             <nav class="navbar bg-body-tertiary"  >
                 <div class="container">
                     <a class="navbar-brand" href="#" >
->>>>>>> 3a10c91e4013b8feeec3881ff377569973e8d7ab
+
                         <img src="/image/logo2.png" alt="Logo" width="40" height="34"
                             class="d-inline-block align-text-top">
                         Speed Dish
@@ -106,56 +98,56 @@
 
         <div class="container mt-4">
             <h4>
-                Top Categories
+                Kategori Teratas
             </h4>
             <div class="category-container">
                 <div class="category-card">
-                    <img alt="Image of Pizza" height="115"
-                        src="https://storage.googleapis.com/a1aa/image/6cQNEHc1xt6NJlu0tvOc7fiSu43KfRuqfYhQUKHN8edrt17OB.jpg"
+                    <img alt="Image makanan1" height="115"
+                        src="image/makanan/makanan-1.jpg"
                         width="170" />
                     <span>
-                        Pizza
+                        Makanan 1
                     </span>
                 </div>
 
                 <div class="category-card">
-                    <img alt="Image of Sushi" height="115"
-                        src="https://storage.googleapis.com/a1aa/image/RpcGfTlRvqTxSiCaeVfWnMQHIbuTt1HoQasZNNdMmcHw26dnA.jpg"
+                    <img alt="Image makanan-1" height="115"
+                        src="image/makanan/makanan-2.jpg"
                         width="170" />
                     <span>
-                        Sushi
+                        makanan-2
                     </span>
                 </div>
                 <div class="category-card">
-                    <img alt="Image of Dessert" height="115"
-                        src="https://storage.googleapis.com/a1aa/image/NFL7ME9FDyKjC5cNwL982f2S7r9fvNusJ1rb9TzSdtZXb9uTA.jpg"
+                    <img alt="Image makanan-3" height="115"
+                        src="image/makanan/makanan-3.jpg"
                         width="170" />
                     <span>
-                        Dessert
+                        makanan-3
                     </span>
                 </div>
                 <div class="category-card">
-                    <img alt="Image of Hamburger" height="115"
-                        src="https://storage.googleapis.com/a1aa/image/Gd8908Ve4vzUIyfyFMFroyVc8Hp9XQKSolNeCpTo86cp26dnA.jpg"
+                    <img alt="Image makanan-4" height="115"
+                        src="image/makanan/makanan-4.jpg"
                         width="170" />
                     <span>
-                        Hamburger
+                        makanan-4
                     </span>
                 </div>
                 <div class="category-card">
-                    <img alt="Image of Ice Cream" height="115"
-                        src="https://storage.googleapis.com/a1aa/image/03oe1Jh0C5XuASFOjRcf3CMpxeJMkrwKpW30bcDzideYt17OB.jpg"
+                    <img alt="Image makanan-5" height="115"
+                        src="image/makanan/makanan-5.jpg"
                         width="170" />
                     <span>
-                        Ice Cream
+                        makanan-5
                     </span>
                 </div>
                 <div class="category-card">
-                    <img alt="Image of Kebab" height="115"
-                        src="https://storage.googleapis.com/a1aa/image/d3fS6yeyIgpg90Jp6IOZ3oC8jqsSV8fafXsIlNL9nf6bar3dC.jpg"
+                    <img alt="Image makanan-6" height="115"
+                        src="image/makanan/makanan-6.jpg"
                         width="170" />
                     <span>
-                        Kebab
+                        makanan-6
                     </span>
                 </div>
                 <div class="arrow">
@@ -192,37 +184,37 @@
         <div class="container mt-5">
             <div class="header">
                 <h2>
-                    Top Rated Restaurants
+                    Restoran Ranting Terastas
                 </h2>
                 <a href="#">
-                    View All →
+                    lihat semua →
                 </a>
             </div>
             <p>
-                Cum doctus civibus efficiantur in imperdiet deterruisset.
+                pilihan restoran terbaik untukmu
             </p>
             <div class="row">
                 <div class="col-md-6">
                     <div class="restaurant-card">
-                        <img alt="Image of La Monnalisa restaurant" height="233"
-                            src="https://storage.googleapis.com/a1aa/image/mv2mSA1DV1YPHVEL01f0qlucYXmI2HNez9WpNgLPC5qrqednA.jpg"
+                        <img alt="Image restoran jawa" height="233"
+                            src="image/restoran/java.jpg"
                             width="350" />
                         <div class="restaurant-info">
                             <p>
-                                Italian
+                                Javanese
                             </p>
                             <h5>
-                                La Monnalisa
+                                Tjokro
                             </h5>
                             <p>
-                                8 Patriot Square E2 9NF
+                                Jl. Kartini no1
                             </p>
                             <span class="badge">
                                 <i class="fas fa-fire">
                                 </i>
                                 -30%
                             </span>
-                            Average price $35
+                            Rata - rata harga Rp 50.000
                         </div>
                         <div class="restaurant-rating">
                             <i class="fas fa-star">
@@ -233,54 +225,54 @@
                 </div>
                 <div class="col-md-6">
                     <div class="restaurant-card">
-                        <img alt="Image of Mr. Pepper restaurant" height="233"
-                            src="https://storage.googleapis.com/a1aa/image/2xdrdiHEbooqFFfhyHY3j5rRSiRYNAA3q9jbsJomyBtXVfuTA.jpg"
+                        <img alt="Image Dijawa" height="233"
+                            src="image/restoran/indonesia.jpg"
                             width="350" />
                         <div class="restaurant-info">
                             <p>
-                                Vegetarian
+                                Javanese
                             </p>
                             <h5>
-                                Mr. Pepper
+                                Dijawa
                             </h5>
                             <p>
-                                27 Old Gloucester St, 4563
+                                Jl. Menco no3 
                             </p>
                             <span class="badge">
                                 <i class="fas fa-fire">
                                 </i>
-                                -30%
+                                -95%
                             </span>
-                            Average price $20
+                            Rata - rata Harga Rp 25.000
                         </div>
                         <div class="restaurant-rating">
                             <i class="fas fa-star">
                             </i>
-                            9.5
+                            9.8
                         </div>
                     </div>
                 </div>
                 <div class="col-md-6">
                     <div class="restaurant-card">
-                        <img alt="Image of Alliance restaurant" height="233"
-                            src="https://storage.googleapis.com/a1aa/image/7FY8tKe3YNydfkaGbdLLf7r3uurVyexteuB4rVngi5PuV13dC.jpg"
+                        <img alt="Image resto seafood" height="233"
+                            src="image/restoran/seafood.jpg"
                             width="350" />
                         <div class="restaurant-info">
                             <p>
-                                Mexican
+                                seafood
                             </p>
                             <h5>
-                                Alliance
+                                Seafoofkoe
                             </h5>
                             <p>
-                                27 Old Gloucester St, 4563
+                                Jl. Pantai Bandengan 
                             </p>
                             <span class="badge">
                                 <i class="fas fa-fire">
                                 </i>
                                 -40%
                             </span>
-                            Average price $30
+                            Rata - rata Harga Rp. 100.000
                         </div>
                         <div class="restaurant-rating">
                             <i class="fas fa-star">
